# DataChat

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main_client.cpp  main_server.cpp  server.cpp
.github/workflows/: c-cpp.yml
common/: Message.cpp  Message.hpp
include/: ChatClient.hpp  ChatServer.hpp  ClientHandler.hpp  ServerSocket.hpp  SocketUtils.hpp  UserManager.hpp
src/: ChatClient.cpp  ChatServer.cpp  ClientHandler.cpp  ServerSocket.cpp  SocketUtils.cpp  UserManager.cpp
